--- a/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
+++ b/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
@@ -4,8 +4,8 @@
     <lightning-card>
         <div class="childparent" >
            <div class="childtext">
-      <div style="padding-left:0px;"> 
-          <lightning-icon icon-name="action:map" size="x-small" alternative-text="Internal" title="Internal">  </lightning-icon>
+      <div style="padding-left:5px;"> 
+          <lightning-icon icon-name="action:map" size="medium" alternative-text="Internal" title="Internal">  </lightning-icon>
            <font size="4"  > &nbsp;&nbsp;<b>Upcoming Holidays </b> </font> <br/><br/>
             </div>
            </div>
