--- a/force-app/main/default/lwc/calenderpto/calenderpto.html
+++ b/force-app/main/default/lwc/calenderpto/calenderpto.html
@@ -2,12 +2,11 @@
     <div class="homeCard">
     <lightning-card >
       
- <div class="parent" style="height:120px;">
-        <div class="child1">
-             <div class="slds-text-title_bold  slds-p-around_x-small slds-align_absolute-center slds-text-heading_large fontsize"
-				>
-				<a href="" onclick={handleClick}> View Org Wide PTO's </a>
-			</div>
+ <div class="parent" style="height:115px;">
+        <div class="child1" style="font-size:20px;padding-left:10px;">
+            
+				<a href="" style="color:black;" onclick={handleClick}> <font size="4" ><b> View Org Wide PTO's </b></font> </a>
+			
         </div>
         <div class="child2">
              <img src={imagelogo} height="80px" width="80px"/>
