--- a/force-app/main/default/lwc/resourceCardTile/resourceCardTile.html
+++ b/force-app/main/default/lwc/resourceCardTile/resourceCardTile.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="childtext" style="padding-top: 20px;">
                        <font size="4" ><b>Next Pay Date</b></font> </br>
-                      <b> <font size="2"> <lightning-formatted-date-time value={nextpaydate}></lightning-formatted-date-time></font> </b><br/>
+                       <font size="2"> <lightning-formatted-date-time value={nextpaydate}></lightning-formatted-date-time></font><br/>
                        
                     </div>
                 </div>
