--- a/force-app/main/default/lwc/cP_ConvertButton/cP_ConvertButton.html
+++ b/force-app/main/default/lwc/cP_ConvertButton/cP_ConvertButton.html
@@ -3,11 +3,11 @@
         <header class="slds-modal__header">
             <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Please Confirm</h2>
         </header>
-        <div class="slds-modal__container  slds-align_absolute-center" id="modal-content-id-1">
+        <div class="slds-modal__container  slds-align_absolute-center" id="modal-content-id-1" style="width: 70%;">
             
             <br><br>
             <slot>
-                <h1>Are you sure you want to convert Applicant to Resource? </h1> 
+                <h2>Are you sure you want to convert Applicant to Resource? </h2> 
             </slot>
             <br><br>
             
