--- a/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
@@ -1,5 +1,12 @@
 <!-- This component is used to apply the Leave For current Logged in Employee  -->
 <template>
+	<!--is Load-->
+  <div if:true={isLoading}>
+        <lightning-spinner
+            alternative-text="Loading..." variant="brand" class="slds-is-fixed">
+        </lightning-spinner>
+    </div>
+    <!--Body-->
 	<div  class="myDivAlligment">
 	<div class="slds-box slds-theme_shade">
 		<div class="slds-modal slds-fade-in-open slds-backdrop">
