march 1 final deployment
march 1 final deployment

--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
@@ -11,7 +11,7 @@
 				      </lightning-helptext></b></font>
 					
 								<div class="childparent">
-				        <div class="childtext"><font size="9"> <b> {leaveBalanceData} </b> </font> </div>
+				        <div class="childtext"><font size="9"> <b> {leaveBalanceData}</b> </font> <font size="2"><b>days</b></font></div>
 				     <div class="childimage" style="padding-left:25px;"> 	<c-e-m-s-_-l-m-_-apply-new istile="true"></c-e-m-s-_-l-m-_-apply-new></div>
 
 							</div>
