--- a/force-app/main/default/lwc/eMS_LeaveRequest_Table/eMS_LeaveRequest_Table.html
+++ b/force-app/main/default/lwc/eMS_LeaveRequest_Table/eMS_LeaveRequest_Table.html
@@ -139,7 +139,7 @@
 			<footer class="slds-modal__footer" style="width:95%;">
 				<template if:false={isViewAll}>
 				<center>
-					<a href="#"  ><font class="uiOutputText" onclick={handlebulkNavigation}>View all my pending requests</font></a> 
+					<a href="#"  ><font class="uiOutputText" onclick={handlebulkNavigation}>View All Pending Requests</font></a> 
 				</center>
 				</template>
 			</footer>
