--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
@@ -27,7 +27,7 @@
 				<footer class="slds-modal__footer">
 					<!---->
 
-					<center> <a href="#" onclick={handleLMNavigation}> View All My Request</a> </center>
+					<center> <a href="#" onclick={handleLMNavigation}> View All Request</a> </center>
 					<!--	 -->
 				</footer>
 
