--- a/force-app/main/default/lwc/calenderpto/calenderpto.html
+++ b/force-app/main/default/lwc/calenderpto/calenderpto.html
@@ -1,18 +1,14 @@
-<template>
-    <div class="homeCard">
-    <lightning-card >
-      
- <div class="parent" style="height:115px;">
+<template> 
+  <lightning-card>
+ <div class="parent">
         <div class="child1" style="font-size:20px;padding-left:10px;">
             
 				<a href="" style="color:black;" onclick={handleClick}> <font size="4" ><b> View Org Wide PTO's </b></font> </a>
 			
         </div>
         <div class="child2">
-             <img src={imagelogo} height="80px" width="80px"/>
+             <img src={imagelogo} width="85px" height="85px" />
         </div>
     </div> 
-
-   </lightning-card>
-    </div>
+  </lightning-card>
 </template>
