--- a/force-app/main/default/lwc/gridHomePage/gridHomePage.html
+++ b/force-app/main/default/lwc/gridHomePage/gridHomePage.html
@@ -13,6 +13,8 @@
 			<c-leave-management-_-tile> </c-leave-management-_-tile>
 			<c-upcoming-holiday-tile></c-upcoming-holiday-tile>
 			<c-assignment-tile></c-assignment-tile>
+			<c-my-service-requests></c-my-service-requests>
+			<c-my-expenses></c-my-expenses>
 		</div>
 	</div>
 
