--- a/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
+++ b/force-app/main/default/lwc/recentRequestTile/recentRequestTile.html
@@ -1,5 +1,5 @@
 <template>
-	<div class="homeCard">
+	<div class="homeCard" style="border-top :  3px solid #9602c7">
 		<div class="childparent" >
            <div class="childtext" style="padding-left: 20px;">
    
