--- a/force-app/main/default/lwc/resourceCardTile/resourceCardTile.html
+++ b/force-app/main/default/lwc/resourceCardTile/resourceCardTile.html
@@ -27,7 +27,7 @@
          
         <div class="child2">
         	<div class="homeCard" style="border-top :  3px solid #9602c7">
-                <div class="childparent" style="height:115px;">
+                <div class="childparent">
                     <div class="childimage">
                       <div class="profile-picture">
                            <img src={paydateimage} alt="" /> 
@@ -45,7 +45,9 @@
             </div> 
         </div>
         <div class="child3">
-       <c-calenderpto></c-calenderpto>
+            <div class="homeCard" style="border-top :  3px solid #9602c7">
+           <c-calenderpto></c-calenderpto>
+            </div>
         </div>
        
     </div>
