--- a/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
+++ b/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
@@ -1,6 +1,6 @@
 <template>
 
-    <div class="homeCard">
+    <div class="homeCard" style="border-top :  3px solid #9602c7">
     <lightning-card>
         <div class="childparent" >
            <div class="childtext">
