--- a/force-app/main/default/lwc/assignmentTile/assignmentTile.html
+++ b/force-app/main/default/lwc/assignmentTile/assignmentTile.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="homeCard">
+    <div class="homeCard" style="border-top :  3px solid #9602c7">
     <lightning-card >
      <template if:true={showThetable}>
     <template for:each={datawrap} for:item="prj">  
